# hotel-booking-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_hotels_rooms.py  0003_create_room_inventory.py  0004_create_bookings.py  0005_create_payments.py
app/: main.py
app/api/: auth.py  bookings.py  hotels.py  hotels_admin.py  payments.py  webhooks.py
app/core/: config.py  deps.py  security.py
app/models/: booking.py  hotel.py  inventory.py  payment.py  user.py
app/schemas/: auth.py  booking.py  hotel.py  payment.py
app/services/: booking.py  inventory.py  payments.py  pricing.py  reaper.py
docs/: DESIGN.md
tests/: conftest.py  test_auth.py  test_bookings.py  test_hotels.py  test_inventory.py  test_payments.py  test_pricing.py
